TEMPLATE: Clean and Package

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <script src="index.js" type="module"></script>
-  <pin-component></pin-component>
+  <component-template></component-template>
 </body>
 
 </html>
